--- a/index2.html
+++ b/index2.html
@@ -12,7 +12,7 @@
 <input type="checkbox" id="sidebar-toggler"/><!--Стартова кнопка-->
 <div id="sidebar"><!--Основной блок-->
 <ul><!--menu-->
-<li><button class="button">Первая</button></li>
+<li><button  class="button">Первая</button></li>
 <li><button class="button">Вторая</button></li>
 <li><button class="button">Третья</button></li>
 <li><button class="button">Четвёртая</button></li>
@@ -20,11 +20,9 @@
 </ul><!--menu-->
 	<div  class="main"><!--Форма проверки данных-->
 	    	<div class="form">
-			<form action ='#' method="post" id="form">
-             <label for="email">
-                    <input type="email" name="email" value="email">
-                </label>
-                <input type="submit" id="submitButton" value="Отправка">
+			<form>
+                <input type="email" class="input" name="email" value="email"/>
+                <input type="submit" onclick = 'submitButton()' id="submitButton" value="Отправка"/>
 			</form>
     </div>  
 	</div><!--Форма проверки данных-->
@@ -36,16 +34,7 @@ function showPopup() {
 }   
 </script>
 <script>
-setInterval(function submitButton(){
-    var form = document.getElementById("form");
-    var subButton = document.getElementById("submitButton");
-    if (form.email.value==""){
-        subButton.disabled = true;
-    }
-    else{
-        subButton.disabled=false;
-    }
-};
+ 
 </script><!--Скрипты-->
 </body>
 </html>
