--- a/index2.html
+++ b/index2.html
@@ -45,7 +45,8 @@ function showPopup() {
         subButton.disabled = true;
     }
     else {
-        subButton.disabled=false;  
+        subButton.disabled=false;
+        subButton.style.background ='red';
     }
 }, 10);
 </script><!--Скрипты-->
